<resources>
    <string name="app_name">V-Store</string>

    <!--  Sign In/Up Strings  -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <!--  Sign In/Up Strings  -->
</resources>